k8s/v1-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: the-economist-namespace
  labels:
    name: the-economist-namespace
