k8s/v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-economist
  namespace: the-economist-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: the-economist
  template:
    metadata:
      labels:
        app: the-economist
    spec:
      containers:
      - name: the-economist
        image: ed00m/the-economist:v0.1
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            # when "host" is not defined, "PodIP" will be used
            # host: my-host
            # when "scheme" is not defined, "HTTP" scheme will be used. Only "HTTP" and "HTTPS" are allowed
            # scheme: HTTPS
            path: /alive
            port: 8000
          initialDelaySeconds: 15
          timeoutSeconds: 1
