k8s/v1-service-ClusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-economist-clusterip
  namespace: the-economist-namespace
spec:
  selector:
    app: the-economist
  type: ClusterIP
  ports:
  - name: the-economist-80
    port: 80
    targetPort: 8000
