k8s/v1-service-LoadBalancer-External.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-economist-loadbalancer-external
  namespace: the-economist-namespace
spec:
  selector:
    app: the-economist
  type: LoadBalancer
  ports:
  - name: the-economist-80
    port: 80
    targetPort: 8000
