k8s/v1-service-LoadBalancer-Internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-economist-loadbalancer-internal
  namespace: the-economist-namespace
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
spec:
  selector:
    app: the-economist
  type: LoadBalancer
  ports:
  - name: the-economist-80
    port: 80
    targetPort: 8000
