k8s/v1-service-NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-economist-nodeport
  namespace: the-economist-namespace
spec:
  selector:
    app: the-economist
  type: NodePort
  ports:
  - name: the-economist-80
    port: 80
    targetPort: 8000
