k8s/v1-ingress-LoadBalancer-Internal.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: the-economist-loadbalancer-internal
  namespace: the-economist-namespace
spec:
  backend:
    serviceName: the-economist-loadbalancer-internal
    servicePort: 80
