k8s/v1-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: the-economist
  namespace: the-economist-namespace
spec:
  backend:
    serviceName: the-economist
    servicePort: 80
